--- a/mysite/mysite/templates/base.html
+++ b/mysite/mysite/templates/base.html
@@ -19,6 +19,7 @@
 
     {# Global stylesheets #}
     <link rel="stylesheet" type="text/css" href="{% static 'css/mysite.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/json_viewer.css' %}">
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 
     {% block extra_css %}
@@ -34,7 +35,7 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="https://unpkg.com/element-ui/lib/index.js"></script>
 <script type="text/javascript" src="{% static 'js/mysite.js' %}"></script>
-<script type="text/javascript" src="{% static 'vue_components/hello-world.js' %}"></script>
+<script type="text/javascript" src="{% static 'vue_components/my.js' %}"></script>
 
 {% block content %}{% endblock %}
 {% block extra_js %}
